[gd_scene load_steps=3 format=3 uid="uid://cp50a8fel0pfa"]

[ext_resource type="Script" path="res://screens/landing/outfitter_window.gd" id="1_0klch"]
[ext_resource type="Material" uid="uid://cs5s3tb7vagsi" path="res://screens/shared_ui/premultiplied_canvas_material.tres" id="2_q0pr4"]

[node name="OutfitterWindow" type="Window" node_paths=PackedStringArray("available_outfits_list", "installed_outfits_list", "outfit_description", "outfit_effects", "cost_label", "cost_heading", "install_button")]
transparent_bg = true
title = "Outfitter"
initial_position = 1
size = Vector2i(700, 400)
transient = true
transparent = true
script = ExtResource("1_0klch")
available_outfits_list = NodePath("PanelContainer/VSplitContainer/HBoxContainer/AvailableOutfits/ItemList")
installed_outfits_list = NodePath("PanelContainer/VSplitContainer/HBoxContainer/InstalledOutfits/ItemList")
outfit_description = NodePath("PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/DescriptionLabel")
outfit_effects = NodePath("PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/VBoxContainer/EffectsLabel")
cost_label = NodePath("PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/CostLabel")
cost_heading = NodePath("PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/CostHeading")
install_button = NodePath("PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/VBoxContainer/InstallButton")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSplitContainer" type="VSplitContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VSplitContainer"]
layout_mode = 2

[node name="AvailableOutfits" type="ScrollContainer" parent="PanelContainer/VSplitContainer/HBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 150)
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="ItemList" type="ItemList" parent="PanelContainer/VSplitContainer/HBoxContainer/AvailableOutfits"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true

[node name="InstalledOutfits" type="ScrollContainer" parent="PanelContainer/VSplitContainer/HBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 150)
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="ItemList" type="ItemList" parent="PanelContainer/VSplitContainer/HBoxContainer/InstalledOutfits"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/margin_top = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VSplitContainer/MarginContainer"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 3

[node name="DescriptionLabel" type="RichTextLabel" parent="PanelContainer/VSplitContainer/MarginContainer/HBoxContainer"]
material = ExtResource("2_q0pr4")
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
bbcode_enabled = true
text = "Here is an [i]outfit[/i] [b]description[/b]."

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VSplitContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EffectsLabel" type="RichTextLabel" parent="PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/VBoxContainer"]
material = ExtResource("2_q0pr4")
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[b]One thing:[/b] good
[b]Another thing:[/b] great"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CostHeading" type="Label" parent="PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
material = ExtResource("2_q0pr4")
layout_mode = 2
text = "Price"
uppercase = true

[node name="CostLabel" type="Label" parent="PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
material = ExtResource("2_q0pr4")
layout_mode = 2
size_flags_horizontal = 10
text = "1235"

[node name="InstallButton" type="Button" parent="PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "INSTALL"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="empty_clicked" from="PanelContainer/VSplitContainer/HBoxContainer/AvailableOutfits/ItemList" to="." method="_on_empty_clicked"]
[connection signal="item_selected" from="PanelContainer/VSplitContainer/HBoxContainer/AvailableOutfits/ItemList" to="." method="_on_available_outfit_selected"]
[connection signal="empty_clicked" from="PanelContainer/VSplitContainer/HBoxContainer/InstalledOutfits/ItemList" to="." method="_on_empty_clicked"]
[connection signal="item_selected" from="PanelContainer/VSplitContainer/HBoxContainer/InstalledOutfits/ItemList" to="." method="_on_installed_outfit_selected"]
